Implemented upload driving license logic
