# backend/routes/api.php
@@ -16,6 +16,7 @@ Route::group(['middleware' => 'auth:sanctum'], function() {
     Route::post('/driver', [DriverController::class, 'update']);
 
     Route::post('/upload-identity-card', [UploadImagesController::class,'uploadIdentityCard']);
+    Route::post('/upload-driver-license', [UploadImagesController::class, 'uploadDriverLicense']);
 
     Route::post('/trip', [TripController::class, 'store']);
     Route::get('/trip/{trip}', [TripController::class, 'show']);
